--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^6.1.0",
     "@prisma/client": "^6.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.2",
+    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.29",
     "nodemon": "^3.1.10",
